crates/poe-ggpk/tests/snapshots/snapshots__clear_exact_patch.snap
---
source: crates/poe-ggpk/tests/snapshots.rs
expression: "report_for_snapshot(temp.path(), report)"
---
byte_len: 5
directory_count: 2
existed: true
file_count: 1
key: poe1/3.29/patches/3.29.3.3
path: poe1/3.29/patches/3.29.3.3
removed: true
